[tool.poetry]
name = "FasterAPI"
version = "0.0.44"
description = "FastAPI but with JWT authentication built for you, server-side task scheduling and more. :)"
authors = ["ulfaric <ryf0510@live.com>"]
readme = "README.md"
license = "CC-BY-NC-ND-4.0"
repository = "https://github.com/ulfaric/FasterAPI"
homepage = "https://ulfaric.github.io/FasterAPI/"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = { extras = ["all"], version = "^0.110.0" }
colorlog = "^6.8.2"
sqlalchemy = "^2.0.28"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
bcrypt = "4.0.1"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
akatosh = "^3.0.7"
opentelemetry-sdk = "1.24.0"
opentelemetry-api = "1.24.0"
opentelemetry-instrumentation = "0.45b0"
opentelemetry-instrumentation-fastapi = "0.45b0"
opentelemetry-exporter-otlp = "1.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
